# accelerated-RS-planner

./: .gitignore  CMakeLists.txt  README.md  accelerateRSPlanner
config/: settings.config
include/classic/: DesaulniersAlgorithm.hpp
include/helper/: HelperFunctions.hpp  Plotter.hpp
include/parser/: ConfigParser.hpp
include/solver/: Solver.hpp
src/: ConfigParser.cpp  DesaulniersAlgorithm.cpp  HelperFunctions.cpp  Plotter.cpp  Solver.cpp  main.cpp
